[package]
name = "modality-dlt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
auxon-sdk = { git = "https://github.com/auxoncorp/auxon-sdk", branch = "client-serde-helper", features = ["modality"] }
clap = "4.5.4"
serde = "1.0.202"
tokio = "1.37.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# Initial PR to upstream: https://github.com/esrlabs/dlt-core/pull/21
dlt-core = { git = "https://github.com/auxoncorp/dlt-core", branch = "replace_buf_redux" }

[[bin]]
name = "modality-dlt-collector"
path = "src/bin/collector.rs"

[[bin]]
name = "modality-dlt-importer"
path = "src/bin/importer.rs"
