[package]
name = "modality-dlt-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.modality-dlt]
path = ".."

[[bin]]
name = "network"
path = "fuzz_targets/network.rs"

[[bin]]
name = "storage_header"
path = "fuzz_targets/storage_header.rs"